--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -22,19 +22,19 @@ Dialog DLL:      TARMP1.DLL V1.26.0.0
  
 <h2>Project:</h2>
 \\vmware-host\Shared Folders\lorenzo On My Mac\Uni\ASE\Extra_point\quorridor\sample.uvprojx
-Project File Date:  01/17/2024
+Project File Date:  01/19/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling quoridor.c...
-game\./player.h(16): warning:  #1-D: last line of file ends without a newline
+compiling walls.c...
+game\./walls.h(16): warning:  #1-D: last line of file ends without a newline
   #endif
-game\./walls.h(15): warning:  #1-D: last line of file ends without a newline
-  #endif
-game\quoridor.c: 2 warnings, 0 errors
+game\walls.c(276): warning:  #1-D: last line of file ends without a newline
+  }
+game\walls.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=29460 RO-data=5548 RW-data=44 ZI-data=4852  
+Program Size: Code=30584 RO-data=5548 RW-data=44 ZI-data=6260  
 ".\sample.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -58,7 +58,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:12
 </pre>
 </body>
 </html>
