--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,15 +27,19 @@ Project File Date:  01/19/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling walls.c...
-game\./walls.h(16): warning:  #1-D: last line of file ends without a newline
+compiling quoridor.c...
+game\./player.h(16): warning:  #1-D: last line of file ends without a newline
   #endif
-game\walls.c(276): warning:  #1-D: last line of file ends without a newline
-  }
-game\walls.c: 2 warnings, 0 errors
+game\./walls.h(30): warning:  #1-D: last line of file ends without a newline
+  #endif
+game\../magda/magda.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+game\quoridor.c(225): warning:  #111-D: statement is unreachable
+      return;
+game\quoridor.c: 4 warnings, 0 errors
 linking...
-Program Size: Code=30584 RO-data=5548 RW-data=44 ZI-data=6260  
-".\sample.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=33352 RO-data=5548 RW-data=44 ZI-data=6260  
+".\sample.axf" - 0 Error(s), 4 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -58,7 +62,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:12
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
