--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,7 +27,21 @@ Project File Date:  01/22/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\sample.axf" - 0 Error(s), 0 Warning(s).
+compiling quoridor.c...
+game\../common.h(223): warning:  #1-D: last line of file ends without a newline
+  #endif
+game\./player.h(17): warning:  #1-D: last line of file ends without a newline
+  #endif
+game\./walls.h(40): warning:  #1-D: last line of file ends without a newline
+  #endif
+game\../magda/magda.h(23): warning:  #1-D: last line of file ends without a newline
+  #endif
+game\quoridor.c(221): warning:  #111-D: statement is unreachable
+      return;
+game\quoridor.c: 5 warnings, 0 errors
+linking...
+Program Size: Code=36090 RO-data=5550 RW-data=68 ZI-data=6404  
+".\sample.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +64,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
