--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -27,20 +27,20 @@ Project File Date:  01/22/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling quoridor.c...
-game\../common.h(223): warning:  #1-D: last line of file ends without a newline
+compiling magda.c...
+magda\../game/../common.h(223): warning:  #1-D: last line of file ends without a newline
   #endif
-game\./player.h(17): warning:  #1-D: last line of file ends without a newline
+magda\../game/player.h(17): warning:  #1-D: last line of file ends without a newline
   #endif
-game\./walls.h(40): warning:  #1-D: last line of file ends without a newline
+magda\../game/walls.h(40): warning:  #1-D: last line of file ends without a newline
   #endif
-game\../magda/magda.h(23): warning:  #1-D: last line of file ends without a newline
+magda\./magda.h(27): warning:  #1-D: last line of file ends without a newline
   #endif
-game\quoridor.c(221): warning:  #111-D: statement is unreachable
-      return;
-game\quoridor.c: 5 warnings, 0 errors
+magda\magda.c(871): warning:  #1-D: last line of file ends without a newline
+  // }
+magda\magda.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=36090 RO-data=5550 RW-data=68 ZI-data=6404  
+Program Size: Code=37434 RO-data=5550 RW-data=68 ZI-data=6404  
 ".\sample.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
