--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -22,26 +22,22 @@ Dialog DLL:      TARMP1.DLL V1.26.0.0
  
 <h2>Project:</h2>
 \\vmware-host\Shared Folders\lorenzo On My Mac\Uni\ASE\Extra_point\quorridor\sample.uvprojx
-Project File Date:  01/22/2024
+Project File Date:  01/25/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling quoridor.c...
-game\../common.h(239): warning:  #1-D: last line of file ends without a newline
+compiling menu.c...
+menu\./../game/../common.h(252): warning:  #1-D: last line of file ends without a newline
   #endif
-game\./player.h(17): warning:  #1-D: last line of file ends without a newline
+menu\../CAN/can_manager.h(5): warning:  #1-D: last line of file ends without a newline
   #endif
-game\./walls.h(40): warning:  #1-D: last line of file ends without a newline
-  #endif
-game\../magda/magda.h(27): warning:  #1-D: last line of file ends without a newline
-  #endif
-game\quoridor.c(306): warning:  #111-D: statement is unreachable
-      return;
-game\quoridor.c: 5 warnings, 0 errors
+menu\menu.c(276): warning:  #1-D: last line of file ends without a newline
+  }
+menu\menu.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=37746 RO-data=5550 RW-data=68 ZI-data=6404  
-".\sample.axf" - 0 Error(s), 5 Warning(s).
+Program Size: Code=39962 RO-data=5618 RW-data=116 ZI-data=6436  
+".\sample.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -64,7 +60,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
