--- a/sample.build_log.htm
+++ b/sample.build_log.htm
@@ -26,42 +26,11 @@ Project File Date:  01/25/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling startup_LPC17xx.s...
-compiling sample.c...
-compiling core_cm3.c...
-compiling system_LPC17xx.c...
-compiling AsciiLib.c...
-compiling GLCD.c...
-compiling HzLib.c...
-compiling funct_joystick.c...
-compiling lib_joystick.c...
-compiling IRQ_button.c...
-compiling lib_button.c...
-compiling IRQ_RIT.c...
-compiling lib_RIT.c...
-compiling IRQ_timer.c...
-compiling lib_timer.c...
-compiling quoridor.c...
-compiling player.c...
-compiling walls.c...
-compiling graphics.c...
-compiling disco_dance.c...
-images\disco_dance.c(9): warning:  #177-D: variable "disco_dance"  was declared but never referenced
-  } disco_dance = {
-images\disco_dance.c: 1 warning, 0 errors
-compiling the_pirate.c...
-images\the_pirate.c(9): warning:  #177-D: variable "the_pirate"  was declared but never referenced
-  } the_pirate = {
-images\the_pirate.c: 1 warning, 0 errors
-compiling magda.c...
-compiling menu.c...
+Build target 'Target 1'
 compiling IRQ_CAN.c...
-compiling lib_CAN.c...
-compiling can_manager.c...
 linking...
-Program Size: Code=41302 RO-data=5618 RW-data=96 ZI-data=6440  
-".\sample.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=42022 RO-data=5618 RW-data=96 ZI-data=6440  
+".\sample.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -84,7 +53,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
